--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">TOP</a></li>
+                <li><a href="store.html">STORE</a></li>
                 
             </ul>
         </nav>
@@ -69,7 +70,7 @@
     </div>
 
     <footer>
-        <p>&copy; Kuwajima</p>
+        <p>&copy; KK_Donuts</p>
     </footer>
 </body>
 
