--- a/item01.html
+++ b/item01.html
@@ -19,6 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">TOP</a></li>
+                <li><a href="store.html">STORE</a></li>
             
             </ul>
         </nav>
@@ -31,21 +32,21 @@
                 <img src="img/o-rudohassyon.jpg" alt="オールドファッション">
             </div>
 
-            <div class="donutsinfo">
-                <h1>オールドファッション</h1>
+            <div class="text">
+                <h1 class="title">オールドファッション</h1>
                 <p>ミスタードーナッツの定番商品！<br>
                     シンプルな味で食べやすいです。<br>
                     とりあえず食べてみるのはいかがでしょうか？</p>
 
                 <div class="price_table">    
-                <dl>
-                    <dt class="cell">テイクアウト[税込]：</dt>
-                    <dd class="cell price">￥151</dd>
-                </dl>
-                <dl>
-                    <dt class="cell">イートイン[税込]：</dt>
-                    <dd class="cell price">￥154</dd>
-                </dl>
+                    <dl>
+                        <dt class="cell">テイクアウト[税込]：</dt>
+                        <dd class="cell price">￥162</dd>
+                    </dl>
+                    <dl>
+                        <dt class="cell">イートイン[税込]：</dt>
+                        <dd class="cell price">￥165</dd>
+                    </dl>
                 </div>
 
                 
@@ -60,7 +61,7 @@
     </div>
 
     <footer>
-        <p>&copy; Kuwajima</p>
+        <p>&copy; KK_Donuts</p>
     </footer>
 </body>
 
