--- a/item02.html
+++ b/item02.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">TOP</a></li>
-                
+                <li><a href="store.html">STORE</a></li>
             </ul>
         </nav>
 
@@ -31,7 +31,7 @@
                 <img src="img/ponderingu.jpg" alt="ポンデリング">
             </div>
 
-            <div class="donutsinfo">
+            <div class="text">
                 <h1>ポンデリング</h1>
                 <p>もちもち食感の人気ドーナッツです！<br>
                     シンプルな甘さが癖になります。</p>
@@ -39,11 +39,11 @@
                 <div class="price_table">    
                 <dl>
                     <dt class="cell">テイクアウト[税込]：</dt>
-                    <dd class="cell price">￥151</dd>
+                    <dd class="cell price">￥162</dd>
                 </dl>
                 <dl>
                     <dt class="cell">イートイン[税込]：</dt>
-                    <dd class="cell price">￥154</dd>
+                    <dd class="cell price">￥165</dd>
                 </dl>
                 </div>
 
@@ -59,7 +59,7 @@
     </div>
 
     <footer>
-        <p>&copy; Kuwajima</p>
+        <p>&copy; KK_Donuts</p>
     </footer>
 </body>
 
