--- a/item04.html
+++ b/item04.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">TOP</a></li>
-            
+                <li><a href="store.html">STORE</a></li>
             </ul>
         </nav>
 
@@ -31,7 +31,7 @@
                 <img src="img/daburuchoko.jpg" alt="ダブルチョコ">
             </div>
 
-            <div class="donutsinfo">
+            <div class="text">
                 <h1>ダブルチョコレート</h1>
                 <p>チョコレートコーティングの生地に<br>
                     チョコクランチがトッピングされたドーナッツです<br>
@@ -40,11 +40,11 @@
                 <div class="price_table">    
                 <dl>
                     <dt class="cell">テイクアウト[税込]：</dt>
-                    <dd class="cell price">￥162</dd>
+                    <dd class="cell price">￥172</dd>
                 </dl>
                 <dl>
                     <dt class="cell">イートイン[税込]：</dt>
-                    <dd class="cell price">￥165</dd>
+                    <dd class="cell price">￥176</dd>
                 </dl>
                 </div>
 
@@ -60,7 +60,7 @@
     </div>
 
     <footer>
-        <p>&copy; Kuwajima</p>
+        <p>&copy; KK_Donuts</p>
     </footer>
 </body>
 
