--- a/store.html
+++ b/store.html
@@ -29,16 +29,16 @@
     </header>
 
     <div class="background">
-        <main>
+        <main class="text">
 
-            <span><h1>センター北駅前</h1></span><span><h2>ショップ</h2></span>
+            <h1><span>センター北駅前</span><span>ショップ</span></h1>
             <p>テイクアウト専門店</p>
 
-            <div>
+            <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.9997755463382!2d139.57572801150332!3d35.55370773685429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f7a8e78c27a5%3A0xee94a42d1c68b148!2z44Of44K544K_44O844OJ44O844OK44OEIOOCu-ODs-OCv-ODvOWMl-mnheWJjeOCt-ODp-ODg-ODlw!5e0!3m2!1sja!2sjp!4v1720465632944!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-            <div class="price_table">
+            <div class="shop_table">
                 <dl>
                     <dt class="cell">住所</dt>
                     <dd class="cell">
