shop_button change

--- a/store.html
+++ b/store.html
@@ -67,9 +67,10 @@
                 </dl>
             </div>
 
-            <a class="button" target="_blank" href="https://md.mapion.co.jp/b/misterdonut/info/1262/">店舗ページ</a>
-            <a class="button" target="_blank" href="https://md.mapion.co.jp/b/misterdonut/">店舗検索</a>
-           
+            <div class="shop_button">
+                <a class="button" target="_blank" href="https://md.mapion.co.jp/b/misterdonut/info/1262/">店舗ページ</a>
+                <a class="button" target="_blank" href="https://md.mapion.co.jp/b/misterdonut/">店舗検索</a>
+            </div>
         </main>
     </div>
 
