itemimg layout change

--- a/item01.html
+++ b/item01.html
@@ -28,9 +28,8 @@
 
     <div class="background">
         <main>
-            <div class="donutsimg">
-                <img src="img/o-rudohassyon.jpg" alt="オールドファッション">
-            </div>
+                <img class="donutsimg" src="img/o-rudohassyon.jpg" alt="オールドファッション">
+       
 
             <div class="text">
                 <h1 class="title">オールドファッション</h1>
