--- a/item02.html
+++ b/item02.html
@@ -27,9 +27,8 @@
 
     <div class="background">
         <main>
-            <div class="donutsimg">
-                <img src="img/ponderingu.jpg" alt="ポンデリング">
-            </div>
+            <img class="donutsimg" src="img/ponderingu.jpg" alt="ポンデリング">
+        
 
             <div class="text">
                 <h1>ポンデリング</h1>
