--- a/item04.html
+++ b/item04.html
@@ -27,10 +27,8 @@
 
     <div class="background">
         <main>
-            <div class="donutsimg">
-                <img src="img/daburuchoko.jpg" alt="ダブルチョコ">
-            </div>
-
+                <img class="donutsimg" src="img/daburuchoko.jpg" alt="ダブルチョコ">
+           
             <div class="text">
                 <h1>ダブルチョコレート</h1>
                 <p>チョコレートコーティングの生地に<br>
