--- a/item03.html
+++ b/item03.html
@@ -27,7 +27,7 @@
 
     <div class="background">
         <main>
-             <img src="img/kokuto-ponde.jpg" alt="黒糖ポンデ">
+             <img class="donutsimg" src="img/kokuto-ponde.jpg" alt="黒糖ポンデ">
    
 
             <div class="text">
