--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul>
                 <li><a href="index.html">TOP</a></li>
                 <li><a href="store.html">STORE</a></li>
+                <li><a href="link.html">LINK</a></li>
                 
             </ul>
         </nav>
